removed redundant command line command