@@ -159,7 +159,6 @@
             </suiteXmlFiles>
             <testFailureIgnore>true</testFailureIgnore>
             <argLine>
-                --illegal-access=permit
                 -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
             </argLine>
         </configuration>
